jdk 16; gradle 7.1; _ID handling; new multi-tree lookup algorithm